# mcp-rag-toolkit

./: .gitignore  README.md  pyproject.toml
auto_updates/: crontab_example.txt  print_next_cron.py  update_index_cron.sh
data/enterprise_rag_sample_docs_v3/company/: employee_directory.csv
data/enterprise_rag_sample_docs_v3/finance/: Q3_Team_Meeting_Notes.docx  customer_feedback.csv  department_budgets_2023.csv
data/enterprise_rag_sample_docs_v3/hr/: HR_FAQs.html  New_Manager_Toolkit.md
data/enterprise_rag_sample_docs_v3/it/: Product_Installation_Guide.txt  support_tickets.csv
data/enterprise_rag_sample_docs_v3/projects/: project_milestones.csv
index/: doc_mapping.pkl  vector.index
mcp_rag_toolkit/: README.md  __init__.py  check.py  csv_to_postgres.py  document_search.py  file_utils.py  index_document_tool.py  model_downloader.py  query_executor.py  read_utils.py  server.py  sql_generator.py  test_qe.py  update_index_tool.py
scripts/: index_log.csv  index_log.txt  setup_data.py
