[project]
name = "mcp-rag-toolkit"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your@email.com" }]
description = "A local RAG toolkit using SQL + Documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sentence-transformers (>=4.1.0,<5.0.0)", "faiss-cpu (>=1.11.0,<2.0.0)", "pdfminer-six (>=20250506,<20250507)", "python-docx (>=1.1.2,<2.0.0)", "pymupdf (>=1.26.1,<2.0.0)"]

[tool.mcp]
packages = [{ include = "mcp_rag_toolkit" }]


[tool.poetry]
name = "mcp-rag-toolkit"
version = "0.1.0"
description = "A local RAG system with SQL + FAISS + Hugging Face models"
authors = ["Aadithya <aadithya@example.com>"]
readme = "README.md"
packages = [{ include = "mcp_rag_toolkit" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
psycopg2-binary = "*"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git" }
fastmcp = "^2.8.0"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

